# quick_learn

./: README.md  pyproject.toml  task.db
quick_learn/: main.py
quick_learn/quick_start/: db.py  quick_start.py
tests/: test.py
