[project]
name = "quick_learn"
version = "0.0.1"
authors = [
  { name="回到古代见李白", email="1477792904@qq.com" },
]
description = "A small example package to help me open webs for fast"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"